# spam_file_virus

./: README.md  main.py  mess_creator.py  pyproject.toml
tests/: test_mess_creator.py
